# spotify-terminal

./: Cargo.toml  README.md
src/: app.rs  main.rs  sptfy.rs  terminal.rs
src/terminal/: relayer.rs
