[package]
name = "spotify-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
open = "3.0"
rspotify = { version = "0.11", features = ["env-file"] }
tokio = { version = "1.20", features = ["full"] }
