[package]
name = "spotify-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
eyre = "0.6"
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }

# spotify-related
open = "3.0"
rspotify = { version = "0.11", features = ["env-file"] }

# terminal-related
termion = "1.5"
unicode-segmentation = "1.9"
unicode-width = "0.1"